--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   image_picker: ^1.1.1
   firebase_core: ^2.31.0
+  location: ^6.0.2
 
 dev_dependencies:
   flutter_test:
