--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^2.31.0
   location: ^6.0.2
   flutter_tflite: ^1.0.1
+  cloud_firestore: ^4.17.5
 
 dev_dependencies:
   flutter_test:
