--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,9 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   image_picker: ^0.8.5+3
   firebase_core: ^2.32.0
-  location: ^6.0.2
   flutter_tflite: ^1.0.1
   cloud_firestore: ^4.17.5
+  geolocator: ^12.0.0
 
 dev_dependencies:
   flutter_test:
