--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_tflite: ^1.0.1
   cloud_firestore: ^4.17.5
   geolocator: ^12.0.0
+  tflite_flutter: ^0.11.0
 
 dev_dependencies:
   flutter_test:
