--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,11 +36,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   image_picker: ^0.8.5+3
-  firebase_core: ^2.32.0
+  firebase_core: ^3.6.0
   flutter_tflite: ^1.0.1
-  cloud_firestore: ^4.17.5
+  cloud_firestore: ^5.4.4
   geolocator: ^12.0.0
   tflite_flutter: ^0.11.0
+  firebase_storage: ^12.3.3
 
 dev_dependencies:
   flutter_test:
