--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
     tflite_flutter: ^0.11.0
     firebase_storage: ^12.3.3
     http: ^1.2.2
+    flutter_map: ^7.0.2
+    latlong2: ^0.9.1
+    flutter_map_cancellable_tile_provider: ^3.0.2
 
 dev_dependencies:
     flutter_test:
